2012-06-01  Sergio Martin <sergio.martin@artica.es>

	* godmode/massive/massive_edit_modules.php: Added units to
	module massive editor and missed help bubble in the same
	editor to post process field

2012-05-31 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/graphs/functions_pchart.php
	 include/graphs/pChart/pDraw.class.php: Graphs with all data equal 
	 to zero are displayed correctly.

2012-05-31 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/reporting/reporting_builder.php: Fixed error updating 
	report items (agent and module were lost if you update item report).

2012-05-31  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/agentes/agent_template.php: Fixed bug: adding
	modules to an agent with templates, if the agent already had
	modules can be duplicated with the same name.

2012-05-31  Sergio Martin <sergio.martin@artica.es>

	* extensions/system_info.php: Fixed strange behavior in
	the system info form for bug 3530863

2012-05-31  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/ver_agente.php: Sorted the agents into
	the massive operations combo and other ajax calls for 
	bug 3530282

2012-05-30 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/events/export_csv.php: Fixed csv events exportation 
	query.

2012-05-30  Sergio Martin <sergio.martin@artica.es>

	* include/functions_modules.php: Duplicate the operations
	too when duplicate a synthetic module for bug 

2012-05-30  Sancho Lerena <slerena@artica.es>

	* include/functions_reporting.php
	include/functions_groups.php: Group/tactical stats
	are now done with functins in function_group. This
	method is also used in the server for the batch
	stats system.

	* operation/agentes/estado_ultimopaquete.php: Fixed
	view on non-init policy modules, shown in the data tab.

2012-05-30 Dario Rodriguez <dario@artica.es>

	* include/functions_reporting.php: Fixed group view,
	unkown agent count was wrong.

2012-05-29  Sancho Lerena <slerena@artica.es>
