@@ -1,3 +1,8 @@
+2012-06-01 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
+
+	* godmode/massive/massive_edit_modules.php: Fixed group recursion 
+	checkbox in massive module edition.
+
 2012-06-01  Sergio Martin <sergio.martin@artica.es>
 
 	* godmode/massive/massive_edit_modules.php: Added units to
